Make Canvas2DLayerBridge use SkColorSpaceXformCanvas

This makes legacy mode canvases render into sRGB (transforming images
as needed).

BUG=709695

Review-Url: https://codereview.chromium.org/2820823004
Cr-Commit-Position: refs/heads/master@{#465069}